--- a/hw2/dp2021s_107590026_hw/pom.xml
+++ b/hw2/dp2021s_107590026_hw/pom.xml
@@ -5,20 +5,21 @@
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>org.ntutssl</groupId>
-  <artifactId>dp2021s_107590026_hw</artifactId>
+  <artifactId>dp2021s_107590026_HW</artifactId>
   <version>1.0-SNAPSHOT</version>
 
-  <name>dp2021s_107590026_hw</name>
+  <name>dp2021s_107590026_HW</name>
   <!-- FIXME change it to the project's website -->
-  <url>http://www.example.com</url>
+  <url>https://ssl-gitlab.csie.ntut.edu.tw/107590026/dp2021s_107590026_hw</url>
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <maven.compiler.source>1.9</maven.compiler.source>
-    <maven.compiler.target>1.9</maven.compiler.target>
+    <maven.compiler.source>1.8</maven.compiler.source>
+    <maven.compiler.target>1.8</maven.compiler.target>
   </properties>
 
   <dependencies>
+
     <dependency>
       <groupId>org.json</groupId>
       <artifactId>json</artifactId>
@@ -32,12 +33,12 @@
       <scope>test</scope>
     </dependency>
 
-    <!-- https://mvnrepository.com/artifact/com.google.guava/guava -->
     <dependency>
       <groupId>com.google.guava</groupId>
       <artifactId>guava</artifactId>
       <version>30.1-jre</version>
     </dependency>
+
   </dependencies>
 
   <build>
