--- a/hw4/dp2021s_hw_107590026/pom.xml
+++ b/hw4/dp2021s_hw_107590026/pom.xml
@@ -19,6 +19,14 @@
   </properties>
 
   <dependencies>
+
+    <dependency>
+      <groupId>com.github.stefanbirkner</groupId>
+      <artifactId>system-rules</artifactId>
+      <version>1.19.0</version>
+      <scope>test</scope>
+    </dependency>
+
     <dependency>
       <groupId>org.json</groupId>
       <artifactId>json</artifactId>
